--- a/backend/Foody/src/docs/asciidoc/index.adoc
+++ b/backend/Foody/src/docs/asciidoc/index.adoc
@@ -14,3 +14,8 @@ endif::[]
 
 include::controller/member/member.adoc[]
 
+[[Refrigerators-API]]
+== Refrigerators API
+
+include::controller/refrigerators/refrigerators.adoc[]
+
