feat: 영양소 조회 API 구현
Former-commit-id: 324c6257a860f5615571d640be0796974ffc84db

--- a/backend/Foody/src/docs/asciidoc/index.adoc
+++ b/backend/Foody/src/docs/asciidoc/index.adoc
@@ -24,3 +24,9 @@ include::controller/refrigerators/refrigerators.adoc[]
 == Mbti API
 
 include::controller/mbti/mbti.adoc[]
+
+
+[[영양소-API]]
+== Nutrient API
+
+include::controller/nutrinet/nutrient.adoc[]
