docs: add bookmark docs
Former-commit-id: 192272628319ed3570f0d4f5b28e9c6377fc3513

--- a/backend/Foody/src/docs/asciidoc/index.adoc
+++ b/backend/Foody/src/docs/asciidoc/index.adoc
@@ -30,3 +30,8 @@ include::controller/mbti/mbti.adoc[]
 == Nutrient API
 
 include::controller/nutrient/nutrient.adoc[]
+
+[[추천-API]]
+== Recommend API
+
+include::controller/recommend/recommend.adoc[]
