--- a/backend/Foody/src/docs/asciidoc/index.adoc
+++ b/backend/Foody/src/docs/asciidoc/index.adoc
@@ -35,3 +35,13 @@ include::controller/nutrient/nutrient.adoc[]
 == Recommend API
 
 include::controller/recommend/recommend.adoc[]
+
+[[북마크-API]]
+== Bookmark API
+
+include::controller/bookmark/bookmark.adoc[]
+
+[[레시피-API]]
+== Recipe API
+
+include::controller/recipe/recipe.adoc[]
